# cytomine

./: .gitignore  .gitlab-ci.yml  .gitmodules  .project  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  build.gradle  checkstyle.xml  compose.build.yaml  compose.override.yaml  compose.yaml  cytomine-helm-0.1.2.tgz  flake.nix  github-log  kubeconfig.yaml  local-compose.yaml  logs  pyproject.toml  result  result.yaml  settings.gradle
.github/: ct.yaml  versions.yaml
.github/workflows/: app-engine.yaml  cbir.yaml  cbir.yml  client-python-code-quality.yaml  client-python.yaml  code-quality.yaml  core.yaml  docker-main.yaml  docker-pull-request.yaml  docker.yaml  docs.yaml  e2e-tests.yaml  helm-main.yaml  helm-test.yaml  helm-test2.yaml  ims.yaml  installer.yaml  main.yaml  pull-request.yaml  python-client.yaml  registry-client.yaml  repository.yaml  sam-weights.yaml  sam.yaml  test.yaml  web-ui.yaml
.run/: AppEngineApplication.run.xml
app-engine/: .gitignore  Dockerfile  build.gradle
app-engine/config/: checkstyle.xml
app-engine/dev/: docker-compose.yml
app-engine/k3s/: registries.yaml
app-engine/task-runner/: Dockerfile
cbir/: Dockerfile  pyproject.toml
cbir/cbir/: app.py  docker-client.py
cbir/cbir/api/: searches.py
cbir/cbir/api/utils/: utils.py
cbir/cbir/models/: resnet.py
cbir/cbir/retrieval/: indexer.py  retrieval.py  store.py
cbir/tests/: conftest.py
clients/python/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
clients/python/cytomine/: __init__.py  cytomine.py
clients/python/cytomine/models/: __init__.py  annotation.py  collection.py  image.py  imagegroup.py  model.py  ontology.py  project.py  property.py  social.py  storage.py  track.py  user.py
clients/python/cytomine/models/_utilities/: __init__.py  dump.py  parallel.py  pattern_matching.py
clients/python/cytomine/utilities/: annotations.py
clients/python/examples/: add_user.py  delete_annotations.py  get_annotations_bbox.py  import_datasets.py  test.py  upload_image.py
clients/python/tests/: conftest.py  test_annotation.py  test_image.py  test_ontology.py  test_pattern_matching.py  test_project.py  test_property.py  test_social.py  test_storage.py  test_user.py
common/: build.gradle
core/: CHANGELOG.md  Dockerfile  README.md  build.gradle  docker-compose.yml
core/specs/: openapi.yml
cytomine-community-edition/: cytomine.template  docker-compose.yml
cytomine-community-edition/docker/: docker-compose.override.sam.yaml
cytomine-community-edition/scripts/: compose.sh  get-profile.sh  set-profile.sh
docker/: compose.dev.ae.yaml  compose.dev.cbir.yaml  compose.dev.core.yaml  compose.dev.iam.yaml  compose.dev.ims.yaml  compose.dev.sam.yaml  compose.dev.ui.yaml  compose.gpu.k3s.yaml
docs/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
docs/code-snippets/: build-and-push-docker-image.yml
e2e/: README.md
e2e-tests/: Dockerfile  build.gradle  entrypoint.sh
helm/: compose.yaml  docker-image-pull-secrets.yaml  docker-images-pull-secrets.yaml
helm/charts/: README.md
helm/docker/: compose.docker-pull.yaml  compose.lsaai.yaml  compose.registries.yaml
helm/example/: values.yaml
iam/: Dockerfile  kc_config.json
k3s/: 00-gateway-api-crds.yaml  01-cilium.yaml  02-cilium-config.yaml  config.toml.tmpl  cytomine-local-ns.yaml  entrypoint.sh  gateway.yaml  nginx-ingress.yaml  nvidia-device-plugin.yaml  registries.yaml  serviceaccounts.yaml
nginx/: Dockerfile
pims/: .gitignore  Dockerfile  pims-config.env  pyproject.toml  requirements.txt
pims/docker/: plugins.py
pims/pims/: __init__.py  __version__.py  application.py  config.py  fastapi_tweaks.py
pims/plugins/pims-plugin-format-czi/: .flake8  .gitignore  .pre-commit-config.yaml  NOTICE  install-prerequisites.sh  pyproject.toml  requirements.txt  setup.py
pims/plugins/pims-plugin-format-czi/pims_plugin_format_czi/: __version__.py  czi.py
pims/plugins/pims-plugin-format-czi/pims_plugin_format_czi/czi_parser/: czi_file.py  czi_parser.py
pims/plugins/pims-plugin-format-czi/pims_plugin_format_czi/tools/: czi_parser.py
pims/plugins/pims-plugin-format-czi/pims_plugin_format_czi/utils/: area.py
pims/plugins/pims-plugin-format-czi/tests/: conftest.py  test_czi.py
pims/scripts/: plugin-list.csv
pims/tests/: conftest.py  test_api_server.py  test_excentric_filename.py  test_formats_utils_structures_pyramid.py  test_jpeg.py  test_png.py  test_tiff.py
registry-client/: .gitlab-ci.yml  README.md  build.gradle
repository/: Dockerfile  build.gradle
sam/: .gitignore  Dockerfile  Dockerfile.weights  README.md  pyproject.toml  ruff.toml
sam/app/: __init__.py  config.py  download_weights.py  main.py
sam/app/annotations/: segmentation.py
sam/app/api/: annotation.py  health.py  prediction.py  router.py  server.py
sam/app/api/models/: model.py  validate.py
sam/app/api/routes/: prediction.py  server.py
sam/app/api/utils/: validate.py
sam/app/schemas/: annotation.py  server.py
sam/app/utils/: align_prompts.py  annotations.py  box_config.py  convert_geojson.py  extract_img.py  format_prompt.py  postprocess.py  window.py
sam/src/: app.py  config.py  download_weights.py
sam/src/api/: health.py  prediction.py
sam/src/sam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sam/src/utils/: annotations.py  convert_geojson.py  postprocess.py
sam/tests/: conftest.py  mock_request.py  mock_request_auto.py  mock_request_very_large.py  test_format_prompt.py  test_validate.py
sam/tests/api/: test_server.py
sam/tests/docker_container_tests/: mock_request.py  mock_request_auto.py  mock_request_smart.py  mock_request_very_large.py
web-ui/: .eslintrc.js  Dockerfile  README.md  docker-entrypoint.sh  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  vite.config.mjs  vitest.config.mjs
web-ui/api-client/: package.json
web-ui/configs/: local.json
web-ui/scripts/: configuration.json  merge_conflicting_translation_files.py
web-ui/src/: App.vue  keycloak.js  lang.js  main.js  routes.js
web-ui/ui/: package.json
(+1879 files in other folders)
