[project]
name = "cytomine-cbir"
version = "0.5.0"
description = "Content-based Image Retrieval"
authors = [
  { name = "Ba Thien Le", email = "ba.le@uliege.be" },
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "Apache-2.0"
dependencies = [
  "docker>=7.1.0",
  "faiss-gpu==1.7.2",
  "fastapi==0.128.1",
  "numpy==1.26.4",
  "pillow==11.3.0",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.22",
  "redis==6.4.0",
  "timm==1.0.19",
  "torch==2.8.0",
  "torchvision==0.23.0",
  "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
  "mypy==1.17.1",
  "ruff==0.12.12",
]

test = [
  "httpx==0.28.1",
  "pytest==8.4.2",
  "testcontainers[redis]==4.13.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.mypy]
ignore_missing_imports = true
