[project]
name = "sam"
version = "0.1.0"
description = "Segment Anything Models"
readme = "README.md"
authors = [
  { name = "Thibaud Vanmechelen", email = "thibaud.vanmechelen@student.uliege.be" },
]
requires-python = ">=3.10"
dependencies = [
  "cytomine-python-client>=3.1.0",
  "fastapi[standard]>=0.116.1",
  "geojson>=3.2.0",
  "matplotlib>=3.10.5",
  "numpy>=2.1.2",
  "opencv-python-headless>=4.11.0.86",
  "pillow>=11.0.0",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "python-box>=7.3.2",
  "sam2>=1.1.0",
  "shapely>=2.1.1",
  "torch==2.6.0",
  "torchvision==0.21.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.17.1",
  "pytest>=8.4.1",
  "ruff>=0.12.10",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.packages]
find = { include = ["app"] }
