[project]
name = "sam"
version = "0.1.0"
description = "Segment Anything Models"
readme = "README.md"
authors = [
  { name = "Cytomine ULiège", email = "uliege@cytomine.org" },
]
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]==0.136.3",
  "geojson==3.2.0",
  "numpy==2.2.6",
  "opencv-python-headless==4.11.0.86",
  "pillow==12.2.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "sam2==1.1.0",
  "shapely==2.1.1",
  "torch==2.10.0",
  "torchvision==0.25.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.setuptools.packages]
find = { include = ["app"] }
