[project]
name = "cytomine-python-client"
version = "4.0.0"
description = "Python client to interact with Cytomine."
authors = [{ name = "Cytomine ULiège", email = "uliege@cytomine.org" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "cachecontrol==0.14.2",
  "requests==2.33.0",
  "requests-toolbelt==1.0.0",
  "shapely==2.0.7",
  "urllib3==2.6.3",
]

[dependency-groups]
dev = [
  "mypy==1.14.1",
  "ruff==0.12.11",
]
test = [
  "pytest==8.3.5",
]

[project.urls]
homepage = "https://uliege.cytomine.org/"
documentation = "https://doc.uliege.cytomine.org/"
repository = "https://github.com/cytomine/cytomine"

[tool.setuptools.packages.find]
include = [
  "cytomine",
  "cytomine.models",
  "cytomine.models._utilities",
  "cytomine.utilities",
]
