[project]
name = "pims-plugin-format-czi"
version = "1.0.3"
description = "CZI plugin for PIMS"
authors = [{ name = "Cytomine ULiège", email = "uliege@cytomine.org" }]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "czifile==2019.7.2",
  "pylibczirw==3.5.2",
  "tifftools>=1.6.1",
]
